--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 
    <header>
-      <a href="">WEBSTUDIO</a>
 
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
             <li><a href="">Studio</a></li>
             <li><a href="">Portfolio</a></li>
@@ -20,10 +20,12 @@
         </ul>
       </nav>
       
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-      </ul>
+      <address>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
    </header>
 
    <main>
@@ -34,6 +36,7 @@
       </section>
 
       <section>
+        <h2>Section2</h2>
         <ul>
             <li>
                 <h3>Strategy</h3>
@@ -45,7 +48,7 @@
             </li>
             <li>
                 <h3>Diligence</h3>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
             </li>
             <li>
                 <h3>Technologies</h3>
@@ -82,7 +85,7 @@
    </main>
 
    <footer>
-      <a href="">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
    </footer>
 
