--- a/index.html
+++ b/index.html
@@ -1,93 +1,383 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>Artificial Intelligence</title>
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <nav class="navigat">
+          <a class="logo-top" href="./index.html">
+            <img
+              class="logo-icon"
+              src="./vector/logo.svg"
+              alt="logo pages"
+              width="44"
+              height="57"
+            />
+            <span class="logo">Artificial Intelligence</span>
+          </a>
+          <ul class="nav-list">
+            <li><a class="nav-link" href="./index.html">Home</a></li>
+            <li><a class="nav-link" href="#">About</a></li>
+            <li><a class="nav-link" href="#">Services</a></li>
+            <li><a class="nav-link" href="#">Blog</a></li>
+            <li><a class="nav-link" href="#">Contact</a></li>
+          </ul>
+        </nav>
+        <button class="top-btn btn" type="button">Sign In</button>
+      </div>
+    </header>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>homework-01</title>
-</head>
+    <main>
+      <section class="hero">
+        <div class="container">
+          <h1 class="hero-title">Artificial intelligence & Syber security</h1>
+          <p class="hero-text-top">Next genaretion platform</p>
+          <p class="text">
+            Lorem ipsum is placeholder text commonly used in the graphic, print,
+            and publishing industries for previewing layouts and visual mockups.
+          </p>
+          <ul class="but-list">
+            <li>
+              <button class="btn h-btn-first" type="button">Get Started</button>
+            </li>
+            <li>
+              <button class="btn h-btn-second" type="button">
+                <svg class="but-icon" width="27" height="26">
+                  <use href="./vector/icons.svg#play"></use>
+                </svg>
+                Watch Video
+              </button>
+            </li>
+          </ul>
+          <ul class="logo-list">
+            <li>
+              <img
+                src="./vector/list-logo1.svg"
+                alt="logo image 1"
+                width="218"
+                height="59"
+              />
+            </li>
+            <li>
+              <img
+                src="./vector/list-logo2.svg"
+                alt="logo image 2"
+                width="212"
+                height="59"
+              />
+            </li>
+            <li>
+              <img
+                src="./vector/list-logo3.svg"
+                alt="logo image 3"
+                width="207"
+                height="59"
+              />
+            </li>
+            <li>
+              <img
+                src="./vector/list-logo4.svg"
+                alt="logo image 4"
+                width="295"
+                height="59"
+              />
+            </li>
+          </ul>
+          <img
+            class="hero-baner"
+            src="./vector/sect1.svg"
+            alt="hero baner"
+            width="632"
+            height="634"
+          />
+        </div>
+      </section>
 
-<body>
+      <section class="apply">
+        <div class="container">
+          <div class="apply-box">
+            <h2 class="text-title apply-title">
+              Apply AI, Deep Learning and Data Sciece to solve
+            </h2>
+            <p class="text apply-text">
+              Lorem ipsum is placeholder text commonly used in the graphic,
+              print, and publishing industries for previewing layouts and visual
+              mockups.
+            </p>
+            <button class="btn apply-btn" type="button">Learn More</button>
+          </div>
+          <img
+            class="apply-baner"
+            src="./vector/sect2.svg"
+            alt="baner section 2"
+            width="725"
+            height="669"
+          />
+        </div>
+      </section>
 
-   <header>
-
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-            <li><a href="">Studio</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Contacts</a></li>
-        </ul>
-      </nav>
-      
-      <address>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul>
-      </address>
-   </header>
-
-   <main>
-
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="metod">
+        <div class="container">
+          <h2 class="visually-hidden">Our achievements</h2>
+          <ul class="box-overlay" data-overlay>
+            <li class="metod-item">
+              <img
+                class="met-icon"
+                src="./vector/sect3-1.svg"
+                alt="Winners in Global Agency Awards"
+                width="73"
+                height="69"
+              />
+              <h3>Naxly as the Winners in Global Agency Awards</h3>
+              <p>
+                Lorem ipsum is placeholder text commonly used in print, and
+                publishing industries for previewing layouts and visual mockups.
+              </p>
+            </li>
+            <li class="metod-item">
+              <img
+                class="met-icon"
+                src="./vector/sect3-2.svg"
+                alt="Expert Prespective Agency Awards"
+                width="98"
+                height="103"
+              />
+              <h3>Expert Prespective Agency Awards</h3>
+              <p>
+                Lorem ipsum is placeholder text commonly used in print, and
+                publishing industries for previewing layouts and visual mockups.
+              </p>
+            </li>
+            <li class="metod-item">
+              <img
+                class="met-icon"
+                src="./vector/sect3-3.svg"
+                alt="Business Prespective"
+                width="98"
+                height="103"
+              />
+              <h3>Business Prespective Global Agency Awards</h3>
+              <p>
+                Lorem ipsum is placeholder text commonly used in print, and
+                publishing industries for previewing layouts and visual mockups.
+              </p>
+            </li>
+            <li class="metod-item">
+              <img
+                class="met-icon"
+                src="./vector/sect3-4.svg"
+                alt="Value for Results"
+                width="98"
+                height="103"
+              />
+              <h3>Value for Results in Global Agency Awards</h3>
+              <p>
+                Lorem ipsum is placeholder text commonly used in print, and
+                publishing industries for previewing layouts and visual mockups.
+              </p>
+            </li>
+            <li class="metod-item">
+              <img
+                class="met-icon"
+                src="./vector/sect3-5.svg"
+                alt="Global Experience"
+                width="98"
+                height="103"
+              />
+              <h3>Global Experience in Agency Awards</h3>
+              <p>
+                Lorem ipsum is placeholder text commonly used in print, and
+                publishing industries for previewing layouts and visual mockups.
+              </p>
+            </li>
+          </ul>
+          <ul class="list-btn">
+            <li>
+              <button class="but first" type="button" data-left></button>
+            </li>
+            <li>
+              <button class="but center" type="button" data-center></button>
+            </li>
+            <li>
+              <button class="but end" type="button" data-right></button>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section>
-        <h2>Section2</h2>
-        <ul>
+        <div>
+          <h2>What our clients say about our awesome solutions</h2>
+          <ul>
             <li>
-                <h3>Strategy</h3>
-                <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+              To take a trivial example, which of us ever undertakes laborious
+              physical exercise, except to obtain some advantage from it who do
+              not know.
             </li>
             <li>
-                <h3>Punctuality</h3>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+              Lorem ipsum is placeholder text commonly used in the graphic,
+              print, and publishing .
             </li>
             <li>
-                <h3>Diligence</h3>
-                <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
+              Lorem ipsum is placeholder previewing layouts and visual mockups.
             </li>
             <li>
-                <h3>Technologies</h3>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+              Lorem ipsum is placeholder text commonly used in the graphic,
+              print, and publishing industries for previewing layouts and visual
+              mockups.
             </li>
-        </ul>
+          </ul>
+          <img
+            src="./vector/sect4.svg"
+            alt="baner section 4"
+            width="642"
+            height="551"
+          />
+        </div>
       </section>
+    </main>
 
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+    <footer>
+      <div>
+        <div>
+          <a href="./index.html">
+            <img
+              src="./vector/logo.svg"
+              alt="logo image"
+              width="45"
+              height="58"
+            />
+            <span>Artificial Intelligence</span>
+          </a>
+          <p>
+            Lorem ipsum is placeholder text commonly used in the graphic, print,
+            and layouts and visual mockups.
+          </p>
+          <address>
+            <ul>
+              <li>
+                <svg width="13" height="10">
+                  <use href="./vector/icons.svg#mail"></use>
+                </svg>
+                <a href="mailto:Company@gmail.com.com">Company@gmail.com.com</a>
+              </li>
+              <li>
+                <svg width="13" height="13">
+                  <use href="./vector/icons.svg#phon"></use>
+                </svg>
+                <a href="tel:0643321233">Phone: (064) 332-1233</a>
+              </li>
+              <li>
+                <svg width="13" height="16">
+                  <use href="./vector/icons.svg#locat"></use>
+                </svg>
+                <a href="#">450 Wall Street, USA, New York</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div>
+          <p>INFORMATION</p>
+          <ul>
+            <li><a href="#">New Collection</a></li>
+            <li><a href="#">About Store</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Latest News</a></li>
+            <li><a href="#">Our Sitemap</a></li>
+            <li><a href="#">Orders History</a></li>
+          </ul>
+        </div>
+        <div>
+          <p>FOOTER MENU</p>
+          <ul>
+            <li><a href="#">Instagram profile</a></li>
+            <li><a href="#">New Collection</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Latest News</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
+            <li><a href="#">Purchase Theme</a></li>
+          </ul>
+        </div>
+        <div>
+          <p>USEFUL LINKS</p>
+          <ul>
+            <li><a href="#">Instagram profile</a></li>
+            <li><a href="#">New Collection</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Latest News</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
+            <li><a href="#">Purchase Theme</a></li>
+          </ul>
+        </div>
+        <div>
+          <p>ABOUT THE STORE</p>
+          <p>
+            Lorem ipsum is placeholder text commonly used in the graphic, print,
+            and layouts and visual mockups.
+          </p>
+          <a href="www.company.com">www.company.com</a>
+          <ul>
             <li>
-                <img src="./images/Mark.jpg" alt="Photo Mark Guerrero" width="264">
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
+              <svg width="8" height="15">
+                <use href="./vector/icons.svg#face"></use>
+              </svg>
             </li>
             <li>
-                <img src="./images/Tom.jpg" alt="Photo Tom Ford" width="264">
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
+              <svg width="15" height="15">
+                <use href="./vector/icons.svg#inst"></use>
+              </svg>
             </li>
             <li>
-                <img src="./images/Camila.jpg" alt="Photo Camila Garcia" width="264">
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
+              <svg width="18" height="15">
+                <use href="./vector/icons.svg#twit"></use>
+              </svg>
             </li>
             <li>
-                <img src="./images/Daniel.jpg" alt="Photo Daniel Wilson" width="264">
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
+              <svg width="15" height="14">
+                <use href="./vector/icons.svg#link"></use>
+              </svg>
             </li>
-        </ul>
-      </section>
-   </main>
+            <li>
+              <svg width="18" height="13">
+                <use href="./vector/icons.svg#youtube"></use>
+              </svg>
+            </li>
+          </ul>
+          <div>
+            <svg width="12" height="13">
+              <use href="./vector/icons.svg#planet"></use>
+            </svg>
+            <select name="lagwich" id="lagwich">
+              <option value="1">Українська</option>
+              <option value="2" selected>English</option>
+              <option value="3">Русский</option>
+            </select>
+            <label for="lagwich">
+              <span>Українська</span>
+              <span>English</span>
+              <span>Русский</span>
+              <span>
+                <svg width="10" height="5">
+                  <use href="./vector/icons.svg#scrol"></use>
+                </svg>
+              </span>
+            </label>
+          </div>
+        </div>
+      </div>
+    </footer>
 
-   <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-   </footer>
-
-</body>
+    <script src="./script/script.js" defer></script>
+  </body>
 </html>
