--- a/index.html
+++ b/index.html
@@ -139,8 +139,10 @@
                 width="73"
                 height="69"
               />
-              <h3>Naxly as the Winners in Global Agency Awards</h3>
-              <p>
+              <h3 class="icon-text">
+                Naxly as the Winners in Global Agency Awards
+              </h3>
+              <p class="icon-lable">
                 Lorem ipsum is placeholder text commonly used in print, and
                 publishing industries for previewing layouts and visual mockups.
               </p>
@@ -153,8 +155,8 @@
                 width="98"
                 height="103"
               />
-              <h3>Expert Prespective Agency Awards</h3>
-              <p>
+              <h3 class="icon-text">Expert Prespective Agency Awards</h3>
+              <p class="icon-lable">
                 Lorem ipsum is placeholder text commonly used in print, and
                 publishing industries for previewing layouts and visual mockups.
               </p>
@@ -167,8 +169,10 @@
                 width="98"
                 height="103"
               />
-              <h3>Business Prespective Global Agency Awards</h3>
-              <p>
+              <h3 class="icon-text">
+                Business Prespective Global Agency Awards
+              </h3>
+              <p class="icon-lable">
                 Lorem ipsum is placeholder text commonly used in print, and
                 publishing industries for previewing layouts and visual mockups.
               </p>
@@ -181,8 +185,10 @@
                 width="98"
                 height="103"
               />
-              <h3>Value for Results in Global Agency Awards</h3>
-              <p>
+              <h3 class="icon-text">
+                Value for Results in Global Agency Awards
+              </h3>
+              <p class="icon-lable">
                 Lorem ipsum is placeholder text commonly used in print, and
                 publishing industries for previewing layouts and visual mockups.
               </p>
@@ -195,8 +201,8 @@
                 width="98"
                 height="103"
               />
-              <h3>Global Experience in Agency Awards</h3>
-              <p>
+              <h3 class="icon-text">Global Experience in Agency Awards</h3>
+              <p class="icon-lable">
                 Lorem ipsum is placeholder text commonly used in print, and
                 publishing industries for previewing layouts and visual mockups.
               </p>
@@ -216,29 +222,32 @@
         </div>
       </section>
 
-      <section>
-        <div>
-          <h2>What our clients say about our awesome solutions</h2>
-          <ul>
-            <li>
+      <section class="our-clients">
+        <div class="container">
+          <h2 class="text-title clients-title">
+            What our clients say about our awesome solutions
+          </h2>
+          <ul class="text-list">
+            <li class="text clients-text">
               To take a trivial example, which of us ever undertakes laborious
               physical exercise, except to obtain some advantage from it who do
               not know.
             </li>
-            <li>
+            <li class="text clients-text">
               Lorem ipsum is placeholder text commonly used in the graphic,
               print, and publishing .
             </li>
-            <li>
+            <li class="text clients-text">
               Lorem ipsum is placeholder previewing layouts and visual mockups.
             </li>
-            <li>
+            <li class="text clients-text">
               Lorem ipsum is placeholder text commonly used in the graphic,
               print, and publishing industries for previewing layouts and visual
               mockups.
             </li>
           </ul>
           <img
+            class="clients-baner"
             src="./vector/sect4.svg"
             alt="baner section 4"
             width="642"
@@ -248,131 +257,142 @@
       </section>
     </main>
 
-    <footer>
-      <div>
+    <footer class="down">
+      <div class="container">
         <div>
-          <a href="./index.html">
+          <a class="logo-down-link" href="./index.html">
             <img
               src="./vector/logo.svg"
               alt="logo image"
               width="45"
               height="58"
             />
-            <span>Artificial Intelligence</span>
+            <span class="logo-down-text">Artificial Intelligence</span>
           </a>
-          <p>
+          <p class="text-down">
             Lorem ipsum is placeholder text commonly used in the graphic, print,
             and layouts and visual mockups.
           </p>
           <address>
-            <ul>
+            <ul class="address-list">
               <li>
-                <svg width="13" height="10">
-                  <use href="./vector/icons.svg#mail"></use>
-                </svg>
-                <a href="mailto:Company@gmail.com.com">Company@gmail.com.com</a>
+                <a class="address-link" href="mailto:Company@gmail.com.com">
+                  <svg class="addres-icon" width="13" height="10">
+                    <use href="./vector/icons.svg#mail"></use>
+                  </svg>
+                  <span>Company@gmail.com.com</span>
+                </a>
               </li>
               <li>
-                <svg width="13" height="13">
-                  <use href="./vector/icons.svg#phon"></use>
-                </svg>
-                <a href="tel:0643321233">Phone: (064) 332-1233</a>
+                <a class="address-link" href="tel:0643321233">
+                  <svg class="addres-icon" width="13" height="13">
+                    <use href="./vector/icons.svg#phon"></use>
+                  </svg>
+                  <span>Phone: (064) 332-1233</span>
+                </a>
               </li>
               <li>
-                <svg width="13" height="16">
-                  <use href="./vector/icons.svg#locat"></use>
-                </svg>
-                <a href="#">450 Wall Street, USA, New York</a>
+                <a class="address-link" href="#">
+                  <svg class="addres-icon" width="13" height="16">
+                    <use href="./vector/icons.svg#locat"></use>
+                  </svg>
+                  <span>450 Wall Street, USA, New York</span>
+                </a>
               </li>
             </ul>
           </address>
         </div>
         <div>
-          <p>INFORMATION</p>
-          <ul>
-            <li><a href="#">New Collection</a></li>
-            <li><a href="#">About Store</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Latest News</a></li>
-            <li><a href="#">Our Sitemap</a></li>
-            <li><a href="#">Orders History</a></li>
+          <p class="down-title">INFORMATION</p>
+          <ul class="down-list">
+            <li><a class="down-list-link" href="#">New Collection</a></li>
+            <li><a class="down-list-link" href="#">About Store</a></li>
+            <li><a class="down-list-link" href="#">Contact Us</a></li>
+            <li><a class="down-list-link" href="#">Latest News</a></li>
+            <li><a class="down-list-link" href="#">Our Sitemap</a></li>
+            <li><a class="down-list-link" href="#">Orders History</a></li>
           </ul>
         </div>
         <div>
-          <p>FOOTER MENU</p>
-          <ul>
-            <li><a href="#">Instagram profile</a></li>
-            <li><a href="#">New Collection</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Latest News</a></li>
-            <li><a href="#">Terms & Conditions</a></li>
-            <li><a href="#">Purchase Theme</a></li>
+          <p class="down-title">FOOTER MENU</p>
+          <ul class="down-list">
+            <li><a class="down-list-link" href="#">Instagram profile</a></li>
+            <li><a class="down-list-link" href="#">New Collection</a></li>
+            <li><a class="down-list-link" href="#">Contact Us</a></li>
+            <li><a class="down-list-link" href="#">Latest News</a></li>
+            <li><a class="down-list-link" href="#">Terms & Conditions</a></li>
+            <li><a class="down-list-link" href="#">Purchase Theme</a></li>
           </ul>
         </div>
         <div>
-          <p>USEFUL LINKS</p>
-          <ul>
-            <li><a href="#">Instagram profile</a></li>
-            <li><a href="#">New Collection</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Latest News</a></li>
-            <li><a href="#">Terms & Conditions</a></li>
-            <li><a href="#">Purchase Theme</a></li>
+          <p class="down-title">USEFUL LINKS</p>
+          <ul class="down-list">
+            <li><a class="down-list-link" href="#">Instagram profile</a></li>
+            <li><a class="down-list-link" href="#">New Collection</a></li>
+            <li><a class="down-list-link" href="#">Contact Us</a></li>
+            <li><a class="down-list-link" href="#">Latest News</a></li>
+            <li><a class="down-list-link" href="#">Terms & Conditions</a></li>
+            <li><a class="down-list-link" href="#">Purchase Theme</a></li>
           </ul>
         </div>
         <div>
-          <p>ABOUT THE STORE</p>
-          <p>
+          <p class="down-title">ABOUT THE STORE</p>
+          <p class="text-down text-dovn-right">
             Lorem ipsum is placeholder text commonly used in the graphic, print,
             and layouts and visual mockups.
           </p>
-          <a href="www.company.com">www.company.com</a>
-          <ul>
+          <a class="link-kompany" href="www.company.com">www.company.com</a>
+          <ul class="soc-list">
             <li>
-              <svg width="8" height="15">
-                <use href="./vector/icons.svg#face"></use>
-              </svg>
+              <a class="soc-link">
+                <svg class="soc-icon" width="8" height="15">
+                  <use href="./vector/icons.svg#face"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <svg width="15" height="15">
-                <use href="./vector/icons.svg#inst"></use>
-              </svg>
+              <a class="soc-link">
+                <svg class="soc-icon" width="15" height="15">
+                  <use href="./vector/icons.svg#inst"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <svg width="18" height="15">
-                <use href="./vector/icons.svg#twit"></use>
-              </svg>
+              <a class="soc-link">
+                <svg class="soc-icon" width="18" height="15">
+                  <use href="./vector/icons.svg#twit"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <svg width="15" height="14">
-                <use href="./vector/icons.svg#link"></use>
-              </svg>
+              <a class="soc-link">
+                <svg class="soc-icon" width="15" height="14">
+                  <use href="./vector/icons.svg#link"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <svg width="18" height="13">
-                <use href="./vector/icons.svg#youtube"></use>
-              </svg>
+              <a class="soc-link">
+                <svg class="soc-icon" width="18" height="13">
+                  <use href="./vector/icons.svg#youtube"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-          <div>
-            <svg width="12" height="13">
-              <use href="./vector/icons.svg#planet"></use>
-            </svg>
-            <select name="lagwich" id="lagwich">
-              <option value="1">Українська</option>
-              <option value="2" selected>English</option>
-              <option value="3">Русский</option>
+          <div class="select-box">
+            <select class="sel-lang" name="lagwich">
+              <option class="sel-opt" value="1">Українська</option>
+              <option class="sel-opt" value="2" selected>English</option>
+              <option class="sel-opt" value="3">Русский</option>
             </select>
-            <label for="lagwich">
-              <span>Українська</span>
-              <span>English</span>
-              <span>Русский</span>
-              <span>
-                <svg width="10" height="5">
-                  <use href="./vector/icons.svg#scrol"></use>
-                </svg>
-              </span>
-            </label>
+            <div class="icon-box-lang">
+              <svg class="planet" width="12" height="13">
+                <use href="./vector/icons.svg#planet"></use>
+              </svg>
+              <svg class="scrol" width="10" height="10">
+                <use href="./vector/icons.svg#scrol"></use>
+              </svg>
+            </div>
           </div>
         </div>
       </div>
